Fix news image aspect ratio to 4:3 on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -534,8 +534,8 @@
 
     .news-list .news-thumb {
         width: 100% !important;
-        aspect-ratio: 16/9;
-        max-height: 200px;
+        aspect-ratio: 4/3;
+        max-height: none;
     }
 
     .news-list .news-thumb img {
